--- a/passengerCounterApp/index.html
+++ b/passengerCounterApp/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
@@ -7,6 +8,6 @@
         <h1>People entered: </h1>      
         <h2 id="count-el">0</h2>
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
-        <script type="module" src="index.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
