--- a/passengerCounterApp/index.html
+++ b/passengerCounterApp/index.html
@@ -7,7 +7,11 @@
     <body>
         <h1>People entered: </h1>      
         <h2 id="count-el">0</h2>
-        <button id="increment-btn" onclick="increment()">INCREMENT</button>
+        <div>
+            <button id="increment-btn" onclick="increment()">INCREMENT</button>
+            <button id="save-btn" onclick="save()">SAVE</button>
+            <button id="reset-btn" onclick="reset()">RESET</button>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
