--- a/passengerCounterApp/index.html
+++ b/passengerCounterApp/index.html
@@ -12,6 +12,7 @@
             <button id="save-btn" onclick="save()">SAVE</button>
             <button id="reset-btn" onclick="reset()">RESET</button>
         </div>
+        <p id="save-el">Previous entries: </p>
         <script src="index.js"></script>
     </body>
 </html>
