added js script

--- a/basketballScoreboard/index.html
+++ b/basketballScoreboard/index.html
@@ -12,7 +12,7 @@
         <div class="scoreboard">
             <div class="home box">
                 <h2>HOME</h2>
-                <p class="home score">3</p>
+                <p id="home-score">0</p>
         
                 <div class="buttons">
                     <button onclick="homePlus1()">+1</button>
@@ -22,7 +22,7 @@
             </div>
             <div class="guest box">
                 <h2>GUEST</h2>
-                <p class="guest score">0</p>
+                <p id="guest-score">0</p>
         
                 <div class="buttons">
                     <button onclick="guestPlus1()">+1</button>
@@ -33,5 +33,6 @@
         </div>
     </div>
     <p id="credits">made with 🩷 | by j-archives</p>
+    <script src="index.js"></script>
 </body>
 </html>
