added prompt to js

--- a/basketballScoreboard/index.html
+++ b/basketballScoreboard/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <p id="scorer">Home and Guest are TIE!</p>
         <div class="scoreboard">
             <div class="home box">
                 <h2>HOME</h2>
