--- a/basketballScoreboard/index.html
+++ b/basketballScoreboard/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/led-digital-7" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Basketball Scoreboard</title>
+    <link rel="icon" type="image/x-icon" href="assets/basketBALL-icon.png">
+    <title>Scoreboard</title>
 </head>
 <body>
     <div class="wrapper">
