--- a/basketballScoreboard/index.html
+++ b/basketballScoreboard/index.html
@@ -34,7 +34,12 @@
             </div>
         </div>
     </div>
-    <p id="credits">made with 🩷 | by j-archives</p>
+    <div class="footer">
+        <a href="https://github.com/j-archives" target="_blank" id="github-link">
+            <img src="assets/white-github-icon.png" width=25px id="github-logo">
+        </a>
+        <p id="credits">made with 🩷 | by j-archives</p>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
