fixed some issues + new bg

--- a/blackjackGame/index.html
+++ b/blackjackGame/index.html
@@ -7,12 +7,15 @@
     <title>Blackjack Game</title>
 </head>
 <body>
-    <h1>Blackjack</h1>
-    <p id="message-el">Want to play a round?</p>
-    <p id="cards-el">Cards:</p>
-    <p id="sum-el">Sum:</p>
-    <button onclick="startGame()">START</button>
-    <button onclick="newCard()">NEW CARD</button>
+    <div class="container">
+        <h1>Blackjack</h1>
+        <p id="message-el">Want to play a round?</p>
+        <p id="cards-el">Cards:</p>
+        <p id="sum-el">Sum:</p>
+        <button onclick="startGame()">START</button>
+        <button onclick="newCard()">NEW CARD</button>
+        <p id="player-el"></p>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
