--- a/blackjackGame/index.html
+++ b/blackjackGame/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=y, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="images/blackjack-icon.png">
     <title>Blackjack Game</title>
 </head>
 <body>
