--- a/passwordGenerator/index.html
+++ b/passwordGenerator/index.html
@@ -17,8 +17,8 @@
             </div>
             <hr class="line">
             <div class="password-container">
-                <div id="password1">>nfJjy!dDvR&ial</div>
-                <div id="password2">egxWij@veiPUwK</div>
+                <div id="password1"></div>
+                <div id="password2"></div>
             </div>
         </div>
     </body>
