--- a/passwordGenerator/index.html
+++ b/passwordGenerator/index.html
@@ -13,7 +13,7 @@
                 <h1 class="karla-font">Generate a</h1>
                 <h1 class="karla-font" id="highlight">random password</h1>
                 <p>Never use an insecure password again.</p>
-                <button>Generate passwords</button>
+                <button onclick="generatePassword()">Generate passwords</button>
             </div>
             <hr class="line">
             <div class="password-container">
@@ -21,5 +21,6 @@
                 <div id="password2"></div>
             </div>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
