--- a/passwordGenerator/index.html
+++ b/passwordGenerator/index.html
@@ -4,6 +4,7 @@
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
         <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="images/key-icon.png">
         <title>Password Generator</title>
 
     </head>
