fixed the structure

--- a/passwordGenerator/index.html
+++ b/passwordGenerator/index.html
@@ -18,8 +18,14 @@
             </div>
             <hr class="line">
             <div class="password-container">
-                <div id="password1"></div>
-                <div id="password2"></div>
+                <div id="password1">
+                    <span class="password-text">GeneratedPassword1</span>
+                    <span class="copy-hint">Copy</span>
+                </div>
+                <div id="password2">
+                    <span class="password-text">GeneratedPassword2</span>
+                    <span class="copy-hint">Copy</span>
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
