--- a/passwordGenerator/index.html
+++ b/passwordGenerator/index.html
@@ -4,22 +4,30 @@
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
         <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/x-icon" href="images/key-icon.png">
+        <link rel="icon" type="image/x-icon" href="assets/key-icon.png">
         <title>Password Generator</title>
 
     </head>
     <body>
-        <div class="contents">
-            <div class="container">
-                <h1 class="karla-font">Generate a</h1>
-                <h1 class="karla-font" id="highlight">random password</h1>
-                <p>Never use an insecure password again.</p>
-                <button onclick="generatePassword()">Generate passwords</button>
+        <div class = "all">
+            <div class="contents">
+                <div class="container">
+                    <h1 class="karla-font">Generate a</h1>
+                    <h1 class="karla-font" id="highlight">random password</h1>
+                    <p>Never use an insecure password again.</p>
+                    <button onclick="generatePassword()">Generate passwords</button>
+                </div>
+                <hr class="line">
+                <div class="password-container">
+                    <div id="password1"></div>
+                    <div id="password2"></div>
+                </div>
             </div>
-            <hr class="line">
-            <div class="password-container">
-                <div id="password1"></div>
-                <div id="password2"></div>
+            <div class="footer">
+                <a href="https://github.com/j-archives" target="_blank" id="github-link">
+                    <img src="assets/white-github-icon.png" width=25px id="github-logo">
+                </a>
+                <p id="credits">made with 🩷 | by j-archives</p>
             </div>
         </div>
         <script src="index.js"></script>
