--- a/rockPaperScissor/index.html
+++ b/rockPaperScissor/index.html
@@ -7,12 +7,15 @@
 
     </head>
     <body>
-        <h1>Rock Paper Scissor</h1>
-        <p>Are you ready?</p>
-        <div id="result">
-            <p id="player1">1</p>
-            <p id="player2">2</p>
+        <div class="container">
+            <h1>Rock Paper Scissor</h1>
+            <p>.</p>
+            <div id="result">
+                <p id="player1">1</p>
+                <p id="player2">2</p>
+            </div>
+            <button id="play" onclick="play()">START GAME</button>
         </div>
-        <button id="play" onclick="play()">START GAME</button>
+        <script src="index.js"></script>
     </body> 
 </html>
