--- a/rockPaperScissor/index.html
+++ b/rockPaperScissor/index.html
@@ -16,6 +16,12 @@
             </div>
             <button id="play" onclick="play()">START GAME</button>
         </div>
+        <div class="footer">
+            <a href="https://github.com/j-archives" target="_blank" id="github-link">
+                <img src="assets/white-github-icon.png" width=25px id="github-logo">
+            </a>
+            <p id="credits">made with 🩷 | by j-archives</p>
+        </div>
         <script src="index.js"></script>
     </body> 
 </html>
