--- a/rockPaperScissor/index.html
+++ b/rockPaperScissor/index.html
@@ -11,8 +11,8 @@
             <h1>Rock Paper Scissor</h1>
             <p>.</p>
             <div id="result">
-                <p id="player1">1</p>
-                <p id="player2">2</p>
+                <p id="player1"></p>
+                <p id="player2"></p>
             </div>
             <button id="play" onclick="play()">START GAME</button>
         </div>
