--- a/rockPaperScissor/index.html
+++ b/rockPaperScissor/index.html
@@ -8,12 +8,13 @@
     </head>
     <body>
         <div class="container">
-            <h1>Rock Paper Scissor</h1>
-            <p>.</p>
-            <div id="result">
+            <!-- <h1>Rock Paper Scissor</h1> -->
+            <!-- <p>.</p> -->
+            <img src="assets/rockPaperScissor.png" id="github-logo">
+            <!-- <div id="result">
                 <p id="player1"></p>
                 <p id="player2"></p>
-            </div>
+            </div> -->
             <button id="play" onclick="play()">START GAME</button>
         </div>
         <div class="footer">
