--- a/rockPaperScissor/index.html
+++ b/rockPaperScissor/index.html
@@ -15,7 +15,9 @@
                 <p id="player1"></p>
                 <p id="player2"></p>
             </div> -->
-            <button id="play" onclick="play()">START GAME</button>
+            <a href="game.html">
+                <button id="play" onclick="play()">START GAME</button>
+            </a>
         </div>
         <div class="footer">
             <a href="https://github.com/j-archives" target="_blank" id="github-link">
