added user input and button

--- a/saveURL/index.html
+++ b/saveURL/index.html
@@ -5,6 +5,7 @@
         <title>Save URL</title>
     </head>
     <body>
-
+        <input id="input-el" type="text">
+        <button id="input-btn">SAVE</button>
     </body>
 </html>
