--- a/saveURL/index.html
+++ b/saveURL/index.html
@@ -7,6 +7,7 @@
     <body>
         <input id="input-el" type="text">
         <button id="input-btn">SAVE</button>
+        <button id="delete-btn">DELETE ALL</button>
         <ul id="ul-el"></ul>
         <script src="index.js"></script>
     </body>
