--- a/unitConverter/index.html
+++ b/unitConverter/index.html
@@ -2,27 +2,28 @@
 <html>
     <head>
         <title>Unit Converter</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     </head>
     <body>
         <div id="container">
             <div id="inputConvert">
                 <h3>Metric/Imperial Unit Converter</h3>
                 <input type="text" id="input-el">
-                <button id="convert-btn"></button>
+                <br>
+                <button id="convert-btn">Convert</button>
             </div>
-            <div id="convert">
-                <div class="convertedValue">
-                    <h4>Length (Meter/Feet)</h4>
-                    <p id="">1</p>
-                </div>
-                <div class="convertedValue">
-                    <h4>Volume (Liters/Gallons))</h4>
-                    <p id="">1</p>
-                </div>
-                <div class="convertedValue">
-                    <h4>Length (Mass/Pounds)</h4>
-                    <p id="">1</p>
-                </div>
+            <div class="convertedValue">
+                <h4>Length (Meter/Feet)</h4>
+                <p id=""></p>
+            </div>
+            <div class="convertedValue">
+                <h4>Volume (Liters/Gallons))</h4>
+                <p id=""></p>
+            </div>
+            <div class="convertedValue">
+                <h4>Length (Mass/Pounds)</h4>
+                <p id=""></p>
             </div>
             
         </div>
