added github icon

--- a/unitConverter/index.html
+++ b/unitConverter/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="footer">
             <a href="https://github.com/j-archives" target="_blank" id="github-link">
-                <img src="assets/white-github-icon.png" width=25px id="github-logo">
+                <img src="assets/github-icon.png" width=25px id="github-logo">
             </a>
             <p id="credits">made with 💗 | by j-archives</p>
         </div>
