added meter to feet function

--- a/unitConverter/index.html
+++ b/unitConverter/index.html
@@ -13,9 +13,8 @@
                 <br>
                 <button id="convert-btn">Convert</button>
             </div>
-            <div class="convertedValue">
+            <div class="convertedValue" id="length-converter">
                 <h4>Length (Meter/Feet)</h4>
-                <p id=""></p>
             </div>
             <div class="convertedValue">
                 <h4>Volume (Liters/Gallons))</h4>
