added id for convertedvalue class

--- a/unitConverter/index.html
+++ b/unitConverter/index.html
@@ -16,12 +16,12 @@
             <div class="convertedValue" id="length-converter">
                 <h4>Length (Meter/Feet)</h4>
             </div>
-            <div class="convertedValue">
+            <div class="convertedValue" id="vol-converter">
                 <h4>Volume (Liters/Gallons))</h4>
                 <p id=""></p>
             </div>
-            <div class="convertedValue">
-                <h4>Length (Mass/Pounds)</h4>
+            <div class="convertedValue" id="mass-converter">
+                <h4>Mass (Kilograms/Pounds)</h4>
                 <p id=""></p>
             </div>
             
