added clearResult function

--- a/unitConverter/index.html
+++ b/unitConverter/index.html
@@ -15,14 +15,15 @@
             </div>
             <div class="convertedValue" id="length-converter">
                 <h4>Length (Meter/Feet)</h4>
+                <p>meters = 0.000 feet | feet = 0.000 meters</p>
             </div>
             <div class="convertedValue" id="vol-converter">
                 <h4>Volume (Liters/Gallons))</h4>
-                <p id=""></p>
+                <p>liters = 0.000 gallons | gallons = 0.000 liters</p>
             </div>
             <div class="convertedValue" id="mass-converter">
                 <h4>Mass (Kilograms/Pounds)</h4>
-                <p id=""></p>
+                <p>kilos = 0.000 pounds | pounds = 0.000 kilos</p>
             </div>
             
         </div>
