--- a/unitConverter/index.html
+++ b/unitConverter/index.html
@@ -4,6 +4,7 @@
         <title>Unit Converter</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+        <link rel="icon" type="image/x-icon" href="assets/straight-ruler-icon.png">
     </head>
     <body>
         <div id="container">
