--- a/saveURLMobile/index.html
+++ b/saveURLMobile/index.html
@@ -7,9 +7,8 @@
     <body>
         <input id="input-el" type="text">
         <button id="input-btn">SAVE</button>
-        <button id="tab-btn">SAVE TAB</button>
         <button id="delete-btn">DELETE ALL</button>
         <ul id="ul-el"></ul>
-        <script src="index.js"></script>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
