--- a/calculatorSolo/index.html
+++ b/calculatorSolo/index.html
@@ -37,5 +37,12 @@
             <button class="col-4" id="equal">=</button>
         </div>
     </div>
+    <div class="footer">
+        <a href="https://github.com/j-archives" target="_blank" id="github-link">
+            <img src="assets/github-icon.png" width=25px id="github-logo">
+        </a>
+        <p id="credits">made with 💗 | by j-archives</p>
+    </div>
+    
 </body>
 </html>
