added numbers in js

--- a/calculatorSolo/index.html
+++ b/calculatorSolo/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <p id="history">‎  </p>
-        <input id="answer">
+        <p id="answer">‎ </p>
         <div class="buttons">
             <button class="row-1" id="all-clear">AC</button>
             <button class="row-1" id="modulus">%</button>
@@ -43,6 +43,6 @@
         </a>
         <p id="credits">made with 💗 | by j-archives</p>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
