--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -5,25 +5,25 @@
         <title>To Do</title>
     </head>
     <body>
-        <div class="">
-            <p>January 1, 2024</p>
+        <div class="container">
+            <p id="date">January 1, 2024</p>
 
             <div class="header">
-                <p>To Do</p>
-                <button>☆ Star</button>
+                <p id="toDo">To Do</p>
+                <button id="starButton">☆ Star</button>
             </div>
             <hr>
-            <input type="text" id="" placeholder="write your task here">
+            <input type="text" id="task-input" placeholder="write your task here">
             <div class="buttons">
-                <button>add</button>
-                <button>del all</button>
+                <button id="add-button">add</button>
+                <button id="delete-all-button">del all</button>
             </div>
             <ul>
                 <li>item 1</li>
                 <li>item 1</li>
                 <li>item 1</li>
             </ul>
-            <p>if you like this, kindly click the star button!</p>
+            <p id="credits">if you like this, kindly click the star button!</p>
         </div>
         <div class="footer">
             <a href="https://github.com/j-archives" target="_blank" id="github-link">
