--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap">
         <title>To Do</title>
     </head>
     <body>
