added icon for github

--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -21,8 +21,8 @@
             </div>
             <ul>
                 <li>item 1</li>
-                <li>item 1</li>
-                <li>item 1</li>
+                <li>item 2</li>
+                <li>item 3</li>
             </ul>
             <p id="credits">if you like this, kindly click the star button!</p>
         </div>
@@ -30,7 +30,7 @@
             <a href="https://github.com/j-archives" target="_blank" id="github-link">
                 <img src="assets/github-icon.png" width=25px id="github-logo">
             </a>
-            <p id="credits">made with 💗 | by j-archives</p>
+            <p id="github-creds">made with 💗 | by j-archives</p>
         </div>
         <script type="module" src="main.js"></script>
     </body>
