removed li items

--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -19,10 +19,10 @@
                 <button id="add-button">add</button>
                 <button id="delete-all-button">del all</button>
             </div>
-            <ul>
-                <li>item 1</li>
+            <ul class="list-container">
+                <!-- <li>item 1</li>
                 <li>item 2</li>
-                <li>item 3</li>
+                <li>item 3</li> -->
             </ul>
             <p id="credits">if you like this, kindly click the star button!</p>
         </div>
