--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -19,7 +19,7 @@
                 <button id="add-button">add</button>
                 <button id="delete-all-button">del all</button>
             </div>
-            <ul class="list-container">
+            <ul id="list-container">
                 <!-- <li>item 1</li>
                 <li>item 2</li>
                 <li>item 3</li> -->
