added link to star button that redirects user to my repo

--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -11,7 +11,7 @@
 
             <div class="header">
                 <p id="toDo">To Do</p>
-                <button id="starButton">☆ Star</button>
+                <a href = "https://github.com/j-archives/to-do-list"><button id="starButton">☆ Star</button></a>
             </div>
             <hr>
             <input type="text" id="task-input" placeholder="write your task here">
